--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@angular/animations": "~8.0.3",
     "@angular/common": "~8.0.3",
     "@angular/compiler": "~8.0.3",
@@ -43,5 +44,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 8.0.6.",
+  "main": "karma.conf.js",
+  "author": "",
+  "license": "ISC"
 }
